--- a/css/index.css
+++ b/css/index.css
@@ -1,1 +1,23 @@
-
+.header {
+  height: auto;
+  width: auto;
+}
+h4{
+  text-align: center;
+}
+h1{
+  text-align: center;
+}
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+.footer {
+   left: 0;
+   bottom: 0;
+   width: 100%;
+   background-color: black;
+   color: white;
+   text-align: center;
+}
